# wiki-base

./: hugo.yml
archetypes/: default.md
assets/css/: elements.css
code/week1/: Main.hs  demo.cabal  first.hs
code/week1/Assignment/: PicturesSVG.hs
content/hello/: hello.md
layouts/_default/_markup/: render-link.html
layouts/partials/: footer.html  header.html
