cabal-version:       >=1.10

name:                demo
version:             0.1.0.0
author:              Daniel Kröni
maintainer:          daniel.kroeni@fhnw.ch
build-type:          Simple


executable demo
  main-is:             Main.hs
  build-depends:       base >=4.6
                     , scotty ==0.12.1
  default-language:    Haskell2010
